# libhipcxx

./: CMakeLists.txt  LICENSE.TXT
.upstream-tests/test/: CMakeLists.txt  cuda_runtime.h  force_include_cuda.h  force_include_hip.h  lit.cfg  lit.site.cfg.in
.upstream-tests/test/cuda/: bad_atomic_alignment.pass.cpp  barrier_init.pass.cpp  barrier_native_handle.pass.cpp  large_type.h  memcpy_async.h  memcpy_async_16.pass.cpp  memcpy_async_32.pass.cpp  memcpy_async_64.pass.cpp  memcpy_async_8.pass.cpp  memcpy_async_large.pass.cpp  pipeline_arrive_on.pass.cpp  pipeline_arrive_on_abi_v2.pass.cpp  pipeline_divergent_threads.pass.cpp  pipeline_group_concept.h  pipeline_group_concept_thread_scope_block.pass.cpp  pipeline_group_concept_thread_scope_device.pass.cpp  pipeline_group_concept_thread_scope_system.pass.cpp  pipeline_memcpy_async_producer_consumer.pass.cpp  pipeline_memcpy_async_thread_scope_block_16.pass.cpp  pipeline_memcpy_async_thread_scope_block_32.pass.cpp  pipeline_memcpy_async_thread_scope_block_8.pass.cpp  pipeline_memcpy_async_thread_scope_block_large_type.pass.cpp  pipeline_memcpy_async_thread_scope_device_16.pass.cpp  pipeline_memcpy_async_thread_scope_device_32.pass.cpp  pipeline_memcpy_async_thread_scope_device_64.pass.cpp  pipeline_memcpy_async_thread_scope_device_8.pass.cpp  pipeline_memcpy_async_thread_scope_device_large_type.pass.cpp  pipeline_memcpy_async_thread_scope_generic.h  pipeline_memcpy_async_thread_scope_system_16.pass.cpp  pipeline_memcpy_async_thread_scope_system_32.pass.cpp  pipeline_memcpy_async_thread_scope_system_64.pass.cpp  pipeline_memcpy_async_thread_scope_system_8.pass.cpp  pipeline_memcpy_async_thread_scope_system_large_type.pass.cpp  pipeline_memcpy_async_thread_scope_thread.h  pipeline_memcpy_async_thread_scope_thread_16.pass.cpp  pipeline_memcpy_async_thread_scope_thread_32.pass.cpp  pipeline_memcpy_async_thread_scope_thread_8.pass.cpp  pipeline_memcpy_async_thread_scope_thread_large_type.pass.cpp  proclaim_return_type.fail.cpp  proclaim_return_type.pass.cpp  (+2 more)
.upstream-tests/test/cuda/annotated_ptr/: access_property.pass.cpp  access_property_explicit.fail.cpp  annotated_ptr.pass.cpp  annotated_ptr_bench.pass.cpp  annotated_ptr_constructors.pass.cpp  annotated_ptr_ctor.fail.cpp  annotated_ptr_host_constructor.pass.cpp  annotated_ptr_host_shared.pass.cpp  annotated_ptr_shmem.pass.cpp  apply_access_property.pass.cpp  associate_access_property.pass.cpp  discard_memory.pass.cpp  memcpy_async.pass.cpp  utils.h
.upstream-tests/test/cuda/atomics/atomic.ext/: atomic_fetch.fail.cpp  atomic_fetch_max.pass.cpp  atomic_fetch_min.pass.cpp  atomic_helpers.h
.upstream-tests/test/cuda/memcpy_async/: group_memcpy_async.h  group_memcpy_async_16b.pass.cpp  group_memcpy_async_32b.pass.cpp  group_memcpy_async_64b.pass.cpp
.upstream-tests/test/cuda/memory_resource/get_property/: forward_property.pass.cpp  get_property.pass.cpp  has_property.pass.cpp
.upstream-tests/test/cuda/memory_resource/memory_resource.async_resource_ref/: async_resource_ref.allocate.pass.cpp  async_resource_ref.construction.pass.cpp  async_resource_ref.conversion.pass.cpp  async_resource_ref.equality.fail.cpp  async_resource_ref.equality.pass.cpp  async_resource_ref.inheritance.pass.cpp  async_resource_ref.properties.pass.cpp
.upstream-tests/test/cuda/memory_resource/memory_resource.concepts/: async_resource.pass.cpp  async_resource_with.pass.cpp  resource.pass.cpp  resource_with.pass.cpp
.upstream-tests/test/cuda/memory_resource/memory_resource.resource_ref/: resource_ref.allocate.pass.cpp  resource_ref.construction.pass.cpp  resource_ref.conversion.pass.cpp  resource_ref.equality.fail.cpp  resource_ref.equality.pass.cpp  resource_ref.inheritance.pass.cpp  resource_ref.properties.pass.cpp
.upstream-tests/test/cuda/stream_ref/: stream_ref.constructor.pass.cpp  stream_ref.equality.pass.cpp  stream_ref.get.pass.cpp  stream_ref.ready.pass.cpp  stream_ref.wait.pass.cpp
.upstream-tests/test/heterogeneous/: atomic.pass.cpp  atomic_flag.pass.cpp  atomic_ref.pass.cpp  barrier.pass.cpp  barrier_abi_v2.pass.cpp  barrier_parity.cuda.pass.cpp  barrier_parity.pass.cpp  barrier_parity.std.pass.cpp  cuda_atomic_ref.pass.cpp  helpers.h  latch.pass.cpp  latch_abi_v2.pass.cpp  pair.pass.cpp  semaphore.pass.cpp  tuple.pass.cpp
.upstream-tests/test/hip/: nothing_to_do.pass.hip  test_hip_cuda_aliasing.pass.cpp
.upstream-tests/test/host_only/: CMakeLists.txt
.upstream-tests/test/libcxx/: libcpp_alignof.pass.cpp
.upstream-tests/test/libcxx/atomics/: diagnose_invalid_memory_order.fail.cpp  libcpp-has-no-threads.fail.cpp  version.pass.cpp
.upstream-tests/test/libcxx/atomics/atomics.align/: align.pass.sh.cpp
.upstream-tests/test/libcxx/atomics/atomics.flag/: init_bool.pass.cpp
.upstream-tests/test/libcxx/atomics/atomics.order/: memory_order.underlying_type.pass.cpp
.upstream-tests/test/libcxx/experimental/filesystem/: deprecated.fail.cpp
.upstream-tests/test/libcxx/fuzzing/: nth_element.cpp  partial_sort.cpp  partial_sort_copy.cpp  partition.cpp  partition_copy.cpp  regex_ECMAScript.cpp  regex_POSIX.cpp  regex_egrep.cpp  regex_extended.cpp  regex_grep.cpp  sort.cpp  stable_partition.cpp  stable_sort.cpp  unique.cpp  unique_copy.cpp
.upstream-tests/test/libcxx/language.support/: has_c11_features.pass.cpp
.upstream-tests/test/libcxx/language.support/cstdint/: version.pass.cpp
.upstream-tests/test/libcxx/selftest/: test_macros.pass.cpp
.upstream-tests/test/libcxx/type_traits/: is_constant_evaluated.pass.cpp  is_implicitly_default_constructible.pass.cpp  lazy_metafunctions.pass.cpp
.upstream-tests/test/pretty_printers/: gdb_pretty_printer_test.sh.cpp
.upstream-tests/test/support/: DefaultOnly.h  MoveOnly.h  allocators.h  archetypes.h  cmpxchg_loop.h  compare_types.h  concurrent_agents.h  cuda_space_selector.h  nasty_containers.h  placement_new.h  test_comparisons.h  test_convertible.h  test_iterators.h  test_macros.h
.upstream-tests/test/support/test.workarounds/: c1xx_broken_za_ctor_check.pass.cpp
.upstream-tests/test/support/type_classification/: swappable.h
(+1417 files in other folders)
